fixed and align content

--- a/client/src/Pages/style.css
+++ b/client/src/Pages/style.css
@@ -2,11 +2,18 @@
     border: 2px;
     border-radius: solid white 3px;
     display: flex;
+    
+}
+.video-array{
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
 }
 .videos{
  margin: 10px;
   border-radius: 15%; 
-     
+  
 }
 
 .register{
@@ -31,8 +38,7 @@
   background: #232526;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #414345, #232526);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #414345, #232526); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  
-
+ text-align: center;
   font-family: 'Playfair Display', serif;
   color: white;
   font-size: 20px;
